dial9-macro/src/snapshots/dial9_macro__tests__expand_basic.snap
---
source: dial9-macro/src/lib.rs
expression: output
---
fn main() {
    let __dial9_rt = ::dial9::TokioSession::new(my_config());
    let __dial9_out = __dial9_rt
        .block_on(async move {
            do_work().await;
        });
    __dial9_rt.graceful_shutdown();
    __dial9_out
}
