dial9-macro/src/snapshots/dial9_macro__tests__expand_with_attributes.snap
---
source: dial9-macro/src/lib.rs
expression: output
---
#[allow(unused)]
fn main() {
    let __dial9_rt = ::dial9::TracedRuntime::new(my_config());
    let __dial9_out = __dial9_rt
        .block_on(async move {
            let _ = 42;
        });
    __dial9_rt.graceful_shutdown();
    __dial9_out
}
