dial9-macro/src/snapshots/dial9_macro__tests__expand_with_disable_graceful_shutdown.snap
---
source: dial9-macro/src/lib.rs
expression: output
---
fn main() {
    let __dial9_config_result: ::std::io::Result<::dial9::AttachedRuntime> = my_config();
    let (__dial9_recorder, __dial9_rt) = __dial9_config_result
        .expect("dial9::main: config failed");
    let __dial9_out = ::dial9::block_on(
        &__dial9_rt,
        async move {
            do_work().await;
        },
    );
    drop(__dial9_rt);
    drop(__dial9_recorder);
    __dial9_out
}
