dial9-macro/src/snapshots/dial9_macro__tests__expand_with_graceful_shutdown_timeout.snap
---
source: dial9-macro/src/lib.rs
expression: output
---
fn main() {
    let (__dial9_recorder, __dial9_rt) = my_config()
        .expect("dial9::main: config failed");
    let __dial9_out = ::dial9::block_on(
        &__dial9_rt,
        async move {
            do_work().await;
        },
    );
    drop(__dial9_rt);
    __dial9_recorder.graceful_shutdown(std::time::Duration::from_secs(7));
    __dial9_out
}
