dial9-macro/src/snapshots/dial9_macro__tests__expand_with_return_type.snap
---
source: dial9-macro/src/lib.rs
assertion_line: 379
expression: output
---
fn main() -> Result<(), Box<dyn std::error::Error>> {
    let __dial9_config_result: ::std::io::Result<::dial9::AttachedRuntime> = my_config();
    let (__dial9_recorder, __dial9_rt) = __dial9_config_result
        .expect("dial9::main: config failed");
    let __dial9_out = ::dial9::block_on(
        &__dial9_rt,
        async move {
            do_work().await?;
            Ok(())
        },
    );
    drop(__dial9_rt);
    __dial9_recorder.graceful_shutdown(::std::time::Duration::from_secs(1));
    __dial9_out
}
